# ROB320-Lab-9

Lab9/: CMakeLists.txt  submit.sh
Lab9/1_visitor/: variant_visitor.hpp  variant_visitor_main.cpp  visitor.hpp  visitor_main.cpp
Lab9/2_strategy/: std_function_strategy.hpp  std_function_strategy_main.cpp  strategy.hpp  strategy_main.cpp
Lab9/3_command/: command.hpp  command_main.cpp
Lab9/4_observer/: observer.hpp  observer_main.cpp
Lab9/6_external_polymorphism/: external_polymorphism.hpp  external_polymorphism_main.cpp
Lab9/7_type_erasure/: type_erasure.hpp  type_erasure_main.cpp
Lab9/8_decorator/: decorator.hpp  decorator_main.cpp  value_based_dynamic_decorator.hpp  value_based_dynamic_decorator_main.cpp  value_based_static_decorator.hpp  value_based_static_decorator_main.cpp
Lab9/9_singleton/: singleton_main.cpp
Lab9/submit/: ._variant_visitor.hpp
